<resources>
    <string name="app_name">Task41_2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="intro_text">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert</string>
    <string name="donut_text">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_text">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_text">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>

    <string name="chosen">Chosen : </string>
    <string name="nothing_clicked">onRadioButtonClicked : Nothing clicked.</string>
</resources>