<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.task41_2.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/intro_text"
                android:textSize="@dimen/head_text" />

            <TextView
                android:id="@+id/chooseDessert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/choose_a_dessert" />

            <ImageView
                android:id="@+id/donut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/donut_text"
                android:onClick="showDonutOrder"
                android:padding="@dimen/padding"
                android:src="@drawable/donut_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_wide"
                android:text="@string/donut_text" />

            <ImageView
                android:id="@+id/iceCream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ice_cream_text"
                android:onClick="showIceCreamOrder"
                android:padding="@dimen/padding"
                android:src="@drawable/icecream_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_wide"
                android:text="@string/ice_cream_text" />

            <ImageView
                android:id="@+id/froyo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/froyo_text"
                android:onClick="showFroyoOrder"
                android:padding="@dimen/padding"
                android:src="@drawable/froyo_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_wide"
                android:text="@string/froyo_text" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>